Editing Color sources

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sliding_up_panel: ^1.0.2
   cached_network_image: ^3.0.0
   material_design_icons_flutter: ^4.0.5955
+  stacked_themes: ^0.3.6
 
 dev_dependencies:
   flutter_test:
