--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   stacked_themes: ^0.3.6
   image_picker: ^0.8.1+3
   http: ^0.13.3
+  get: ^4.1.4
+  json_serializable: ^4.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
