--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.3
   get: ^4.1.4
   json_serializable: ^4.1.3
+  draggable_fab: ^0.1.1
 
 dev_dependencies:
   flutter_test:
