--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.1.4
   json_serializable: ^4.1.3
   draggable_fab: ^0.1.1
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
