--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,15 @@ dependencies:
   sliding_up_panel: ^1.0.2
   cached_network_image: ^3.0.0
   material_design_icons_flutter: ^4.0.5955
-  stacked_themes: ^0.3.6
+  stacked_themes: ^0.3.2
   image_picker: ^0.8.1+3
   http: ^0.13.3
   get: ^4.1.4
   json_serializable: ^4.1.3
   draggable_fab: ^0.1.1
   dio: ^4.0.0
+  video_player: ^2.1.10
+  story_view: ^0.13.1
 
 dev_dependencies:
   flutter_test:
