--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   cached_network_image: ^3.0.0
   material_design_icons_flutter: ^4.0.5955
   stacked_themes: ^0.3.2
-  image_picker: ^0.8.1+3
+  image_picker: ^0.8.2
   http: ^0.13.3
   get: ^4.1.4
   json_serializable: ^4.1.3
