--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   dio: ^4.0.0
   video_player: ^2.1.10
   story_view: ^0.13.1
+  firebase_core: ^1.4.0
+  firebase_auth: ^3.0.1
+  cloud_firestore: ^2.4.0
 
 dev_dependencies:
   flutter_test:
